--- a/LibraryWebApp/appsettings.json
+++ b/LibraryWebApp/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LibraryContext": "Data Source=DELLLAPTOP\\ABSQL01;Initial Catalog=LibraryAppDb;Integrated Security=True"
+  }
 }
