--- a/LibraryWebApp/LibraryWebApp.csproj
+++ b/LibraryWebApp/LibraryWebApp.csproj
@@ -6,8 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="BundlerMinifier.Core" Version="3.2.447" />
     <PackageReference Include="EntityFramework" Version="6.4.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\lib\bootbox\dist\" />
   </ItemGroup>
 
 
